Fixed page spacing from the header
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/main.less
+++ b/css/main.less
@@ -94,7 +94,7 @@
 	.multiColumn {
 		.sidebar,
 		.moduleBody {
-			padding-top: 1em;
+			padding-top: 4em;
 		}
 
 		.sidebar {
